# vault-search

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: changelog-reminder.py
.claude/skills/changelog/: SKILL.md
.claude/skills/update-index/: SKILL.md
docs/: 2026-05-11-vault-search-exe.md  2026-05-11-vault-search-implementation-plan.md  2026-05-11-vault-search-plan.md  2026-05-11-vault-search-project-blueprint.md  2026-05-12-vault-search-architecture.md  PROJECT_STATUS.md
docs/changelog/: 2026-05-28-search-quality-fix.md
docs/design/: search-output-enhancement.md  search-refactoring.md
docs/design/strategy/: plain_text.md  table.md
docs/strategy-design/: code_block.md  list.md  overview.md
docs/快捷键-Hotkeys/: chrome.md  git.md  idea.md  obsidian.md  utools.md  vscode.md
src/vault_search/: __init__.py  cli.py  config.py  database.py  discovery.py  formatter.py  indexer.py  models.py  parser.py  search.py  snippet.py
src/vault_search/snippet_strategies/: __init__.py  base.py  code_block.py  list.py  plain_text.py  table.py
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_discovery.py  test_indexer.py  test_parser.py
